# pyaoc

./: .gitignore  .pre-commit-config.yaml  LICENCE  pyproject.toml
inputs/y_2020/: sample_d_04.txt
src/librarium/: drange.py  grid.py  modclock.py  sparse_arr.py  unionfind.py
src/pyaoc/: __init__.py  cli.py  config.py  input.py  solution.py  solver.py
src/pyaoc/y_2020/: __init__.py  d_01.py
src/pyaoc/y_2025/: __init__.py  d_01.py  d_02.py  d_03.py  d_04.py  d_05.py  d_06.py  d_07.py  d_08.py  d_09.py  d_10.py  d_11.py
tests/: test_2025_02.py  test_modclock.py
