[project]
name = "pyaoc"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
package = true

[project.scripts]
pyaoc = "pyaoc.cli:run"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "C", "SIM", "B", "Q", "I"]

